# esp32_ble_ota

./: .gitmodules
ble_client/: main.py  read_message.py  send_message.py
esp/: CMakeLists.txt  sdkconfig
esp/components/bmi160Impl/: bmi160Impl.c
esp/components/lsm303agrImpl/: lsm303agrImpl.c  lsm303agrImpl.h
esp/components/protobuf/: CMakeLists.txt
esp/components/valiturus_battery/: CMakeLists.txt  valiturus_battery.c  valiturus_battery.h
esp/main/: CMakeLists.txt  main.c
esp/main/application/bluetooth/: bluetooth.c  bluetooth.h  gatt.c  gatt.h  messaging_gatt_service.c  messaging_gatt_service.h  ota_gatt_service.c
esp/main/application/bluetooth/gatt/: gap.c  gatt.c  gatt.h  messaging_gatt_service.c  messaging_gatt_service.h  ota_gatt_service.c  ota_gatt_service.h
esp/main/application/led/: led.c
esp/main/application/protobuf/algorithim/: Algorithim.pb.c  Algorithim.pb.h  algorithim.proto  algorithim_pb2.py
esp/main/application/protobuf/algorithim/dart/: algorithim.pb.dart  algorithim.pbenum.dart  algorithim.pbjson.dart  algorithim.pbserver.dart
esp/main/application/sensors/bmiSensor/: bmiSensor.c  bmiSensor.h  bmiTasks.c
esp/main/examples/bmi_160_example/: bmi_160_example.c
